force-app/main/default/objects/ccrz__E_LocaleMap__c/ccrz__E_LocaleMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CC Locale Map</label>
</CustomObject>