force-app/main/default/objects/ccrz__E_LocaleMap__c/fields/ccrz__BrowserLocale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BrowserLocale__c</fullName>
    <label>BrowserLocale</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>