force-app/main/default/objects/ccrz__E_LocaleMap__c/fields/ccrz__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>