force-app/main/default/objects/ccrz__E_LocaleMap__c/fields/ccrz__Currency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Currency__c</fullName>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>